[package]
name = "distributed-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
dashmap = "5.4"
chrono = "0.4"
